# golem-llm

./: .gitignore  CONTRIBUTE.md  Cargo.toml  Makefile.toml  README.md
.github/workflows/: ci.yaml  ollama-tests.yml
llm/: Cargo.toml
llm-anthropic/: Cargo.toml
llm-anthropic/src/: bindings.rs  client.rs  conversions.rs  lib.rs
llm-anthropic/src/client/: mod.rs
llm-anthropic/wit/: anhropic.wit
llm-bedrock/: Cargo.toml
llm-bedrock/src/: bindings.rs  client.rs  conversions.rs  lib.rs
llm-bedrock/wit/: bedrock.wit
llm-grok/: Cargo.toml
llm-grok/src/: bindings.rs  client.rs  conversions.rs  lib.rs
llm-grok/src/client/: mod.rs
llm-grok/wit/: grok.wit
llm-ollama/: Cargo.toml
llm-ollama/src/: bindings.rs  client.rs  conversions.rs  lib.rs
llm-ollama/wit/: ollama.wit
llm-openai/: Cargo.toml
llm-openai/src/: bindings.rs  client.rs  conversions.rs  lib.rs
llm-openai/src/client/: mod.rs
llm-openai/wit/: openai.wit
llm-openrouter/: Cargo.toml
llm-openrouter/src/: bindings.rs  client.rs  conversions.rs  lib.rs
llm-openrouter/wit/: openrouter.wit
llm/src/: chat_stream.rs  config.rs  durability.rs  error.rs  lib.rs
llm/src/event_source/: error.rs  event_stream.rs  message_event.rs  mod.rs  parser.rs  utf8_stream.rs
llm/wit/: llm.wit
test/: .gitignore  golem.yaml
test/components-rust/test-anthropic/: Cargo.toml  golem.yaml
test/components-rust/test-anthropic/golem-temp/linked-wasm/: test:anthropic.wasm
test/components-rust/test-anthropic/src/: lib.rs
test/components-rust/test-anthropic/wit/: test-anthropic.wit
test/components-rust/test-grok/: Cargo.toml  golem.yaml
test/components-rust/test-grok/golem-temp/linked-wasm/: test:grok.wasm
test/components-rust/test-grok/src/: lib.rs
test/components-rust/test-grok/wit/: test-grok.wit
test/components-rust/test-helper/: Cargo.toml  golem.yaml
test/components-rust/test-helper/src/: lib.rs
test/components-rust/test-helper/wit/: test-helper.wit
test/components-rust/test-llm/: Cargo.toml  golem.yaml
test/components-rust/test-llm/src/: lib.rs
test/components-rust/test-llm/wit/: test-llm.wit
test/components-rust/test-openai/: Cargo.toml  golem.yaml
test/components-rust/test-openai/src/: lib.rs
test/components-rust/test-openai/wit/: test-openai.wit
test/components-rust/test-openrouter/: Cargo.toml  golem.yaml
test/components-rust/test-openrouter/golem-temp/linked-wasm/: test:openrouter.wasm
test/components-rust/test-openrouter/src/: lib.rs
test/components-rust/test-openrouter/wit/: test-openrouter.wit
wit/: deps.toml  golem-llm.wit
