[workspace]
resolver = "2"

members = ["llm", "llm-anthropic", "llm-grok", "llm-openai", "llm-openrouter"]

[profile.release]
debug = false
lto = true
opt-level = 's'

[workspace.dependencies]
golem-rust = "1.5.1"
#reqwest = { git = "https://github.com/golemcloud/reqwest", branch = "update-march-2025", features = ["json"] }
reqwest = { path = "../reqwest", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
