[workspace]
resolver = "2"

members = ["llm", "llm-anthropic", "llm-grok", "llm-ollama", "llm-openai", "llm-openrouter"]

[profile.release]
debug = false
lto = true
opt-level = 's'

[workspace.dependencies]
golem-rust = "1.5.3"
log = "0.4.27"
reqwest = { git = "https://github.com/golemcloud/reqwest", branch = "update-april-2025", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
wit-bindgen-rt = { version = "0.40.0", features = ["bitflags"] }
