[package]
name = "golem-llm-grok"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-llm"
description = "WebAssembly component for working with Grok APIs, with special support for Golem Cloud"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
golem-llm = { path = "../llm", version = "0.0.1" }

golem-rust = { workspace = true }
log = "0.4.27"
reqwest =  { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { version = "0.40.0", features = ["bitflags"] }

[package.metadata.component]
package = "golem:llm-grok"

[package.metadata.component.bindings]
generate_unused_types = true

[package.metadata.component.bindings.with]
"golem:llm/llm@1.0.0" = "golem_llm::golem::llm::llm"
"wasi:io/poll@0.2.0" = "golem_rust::wasm_rpc::wasi::io::poll"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"golem:llm" = { path = "wit/deps/golem-llm" }
"wasi:io" = { path = "wit/deps/wasi:io"}
