[package]
name = "golem-llm-ollama"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-llm"
description = "WebAssembly component for working with Ollama APIs, integrated into Golem Cloud local model support"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["durability"]
durability = ["golem-rust/durability", "golem-llm/durability"]

[dependencies]
golem-llm = { path = "../llm", version = "0.0.0", default-features = false }

base64 = { workspace = true }
golem-rust = { workspace = true }
log = { workspace = true }
reqwest =  { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true }

[package.metadata.component]
package = "golem:llm-ollama"

[package.metadata.component.bindings]
generate_unused_types = true

[package.metadata.component.bindings.with]
"golem:llm/llm@1.0.0" = "golem_llm::golem::llm::llm"
"wasi:io/poll@0.2.0" = "golem_rust::wasm_rpc::wasi::io::poll"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"golem:llm" = { path = "wit/deps/golem-llm" }
"wasi:io" = { path = "wit/deps/wasi:io"}