[package]
name = "test_openai"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[dependencies]
# To use common shared libs, use the following:
# common-lib = { path = "../../common-rust/common-lib" }

golem-rust = { workspace = true }
log = { version = "0.4.27" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true }

[package.metadata.component.target]
path = "wit-generated"

[package.metadata.component.bindings.with]
"wasi:io/poll@0.2.0" = "golem_rust::wasm_rpc::wasi::io::poll"

[package.metadata.component.target.dependencies]
"wasi:io" = { path = "wit-generated/deps/wasi:io" }
"golem:llm" = { path = "wit-generated/deps/golem-llm" }
"test:openai-exports" = { path = "wit-generated/deps/test_openai-exports" }

[package.metadata.component.bindings]
# See https://github.com/bytecodealliance/cargo-component/blob/main/src/metadata.rs#L62

# derives = ["serde::Serialize", "serde::Deserialize"]
# generate_unused_types = true